addition of testing with new images

--- a/torch_mnist_cnn.ipynb
+++ b/torch_mnist_cnn.ipynb
@@ -902,6 +902,15 @@
    "source": [
     "torch.save(model, 'mnist_cnn.pth')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = test_data[1000]"
+   ]
   }
  ],
  "metadata": {
